@@ -20,13 +20,13 @@ import java.nio.charset.Charset;
 import java.util.Map;
 import java.util.Objects;
 
-import static uk.gov.hmcts.reform.pip.model.publication.ListType.SENIOR_COURTS_COSTS_OFFICE_DAILY_CAUSE_LIST;
+import static uk.gov.hmcts.reform.pip.model.publication.ListType.CIC_WEEKLY_HEARING_LIST;
 
 @ActiveProfiles("test")
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-class SeniorCourtsCostsOfficeDailyCauseListFileConverterTest {
-    private static final String CONTENT_DATE = "23 April 2025";
-    private static final String LAST_RECEIVED_DATE = "2025-04-22T09:30:00Z";
+class CicWeeklyHearingListFileConverterTest {
+    private static final String CONTENT_DATE = "27 June 2025";
+    private static final String LAST_RECEIVED_DATE = "2025-06-26T09:30:00Z";
     private static final String PROVENANCE = "provenance";
     private static final String CONTENT_DATE_METADATA = "contentDate";
     private static final String PROVENANCE_METADATA = "provenance";
@@ -38,23 +38,21 @@ class SeniorCourtsCostsOfficeDailyCauseListFileConverterTest {
     private static final String WELSH = "WELSH";
 
     private static final String HEADER_ELEMENT = "page-heading";
-    private static final String VENUE_NAME_ELEMENT = "venue-name";
-    private static final String ADDRESS_LINE1_ELEMENT = "address-line-1";
-    private static final String ADDRESS_LINE2_ELEMENT = "address-line-2";
+    private static final String VENUE_LINE1_ELEMENT = "venue-line-1";
+    private static final String VENUE_LINE2_ELEMENT = "venue-line-2";
+    private static final String VENUE_LINE3_ELEMENT = "venue-line-3";
     private static final String LIST_DATE_ELEMENT = "list-date";
     private static final String LAST_UPDATED_DATE_ELEMENT = "last-updated-date";
-    private static final String SUMMARY_TITLE_CLASS = "govuk-details__summary-text";
-    private static final String SUMMARY_TEXT_CLASS = "govuk-details__text";
-    private static final String LINK_CLASS = "govuk-link";
-    private static final String HREF = "href";
+    private static final String SUMMARY_TEXT_CLASS = "govuk-details__summary-text";
 
     private static final String TITLE_MESSAGE = "Title does not match";
     private static final String HEADER_MESSAGE = "Header does not match";
-    private static final String VENUE_MESSAGE = "Venue does not match";
     private static final String LIST_DATE_MESSAGE = "List date does not match";
     private static final String LAST_UPDATED_DATE_MESSAGE = "Last updated date does not match";
-    private static final String IMPORTANT_INFORMATION_MESSAGE = "Important information does not match";
+    private static final String IMPORTANT_INFORMATION_MESSAGE = "Important information message does not match";
+    private static final String BODY_MESSAGE = "Body does not match";
     private static final String TABLE_HEADERS_MESSAGE = "Table headers does not match";
+    private static final String TABLE_CONTENT_MESSAGE = "Table content does not match";
 
     private final NonStrategicListFileConverter converter = new NonStrategicListFileConverter();
 
@@ -63,28 +61,30 @@ class SeniorCourtsCostsOfficeDailyCauseListFileConverterTest {
     @BeforeAll
     void setup() throws IOException {
         try (InputStream inputStream = getClass()
-            .getResourceAsStream("/mocks/non-strategic/seniorCourtsCostsOfficeDailyCauseList.json")) {
+            .getResourceAsStream("/mocks/non-strategic/cicWeeklyHearingList.json")) {
             String inputRaw = IOUtils.toString(inputStream, Charset.defaultCharset());
             cstInputJson = new ObjectMapper().readTree(inputRaw);
         }
     }
 
     @Test
-    void testSeniorCourtsCostsOfficeDailyCauseListFileConversionInEnglish() throws IOException {
+    void testCicWeeklyHearingListFileConversionInEnglish() throws IOException {
         Map<String, Object> languageResource;
         try (InputStream languageFile = Thread.currentThread()
             .getContextClassLoader()
-            .getResourceAsStream("templates/languages/en/non-strategic/seniorCourtsCostsOfficeDailyCauseList.json")) {
+            .getResourceAsStream("templates/languages/en/non-strategic/cicWeeklyHearingList.json")) {
             languageResource = new ObjectMapper().readValue(
                 Objects.requireNonNull(languageFile).readAllBytes(), new TypeReference<>() {
-                });
+                }
+            );
         }
 
-        Map<String, String> metadata = Map.of(CONTENT_DATE_METADATA, CONTENT_DATE,
-                                              PROVENANCE_METADATA, PROVENANCE,
-                                              LANGUAGE_METADATA, ENGLISH,
-                                              LIST_TYPE_METADATA, SENIOR_COURTS_COSTS_OFFICE_DAILY_CAUSE_LIST.name(),
-                                              LAST_RECEIVED_DATE_METADATA, LAST_RECEIVED_DATE
+        Map<String, String> metadata = Map.of(
+            CONTENT_DATE_METADATA, CONTENT_DATE,
+            PROVENANCE_METADATA, PROVENANCE,
+            LANGUAGE_METADATA, ENGLISH,
+            LIST_TYPE_METADATA, CIC_WEEKLY_HEARING_LIST.name(),
+            LAST_RECEIVED_DATE_METADATA, LAST_RECEIVED_DATE
         );
 
         String result = converter.convert(cstInputJson, metadata, languageResource);
@@ -94,70 +94,91 @@ class SeniorCourtsCostsOfficeDailyCauseListFileConverterTest {
 
         softly.assertThat(document.title())
             .as(TITLE_MESSAGE)
-            .isEqualTo("Senior Courts Costs Office Daily Cause List");
+            .isEqualTo("Criminal Injuries Compensation Weekly Hearing List");
 
         softly.assertThat(document.getElementById(HEADER_ELEMENT).text())
             .as(HEADER_MESSAGE)
-            .isEqualTo("Senior Courts Costs Office Daily Cause List");
-
-        softly.assertThat(document.getElementById(VENUE_NAME_ELEMENT).text())
-            .as(VENUE_MESSAGE)
-            .isEqualTo("Royal Courts of Justice");
-
-        softly.assertThat(document.getElementById(ADDRESS_LINE1_ELEMENT).text())
-            .as(VENUE_MESSAGE)
-            .isEqualTo("Strand, London");
-
-        softly.assertThat(document.getElementById(ADDRESS_LINE2_ELEMENT).text())
-            .as(VENUE_MESSAGE)
-            .isEqualTo("WC2A 2LL");
+            .isEqualTo("Criminal Injuries Compensation Weekly Hearing List");
 
         softly.assertThat(document.getElementById(LIST_DATE_ELEMENT).text())
             .as(LIST_DATE_MESSAGE)
-            .isEqualTo("List for 23 April 2025");
+            .isEqualTo("List for week commencing 27 June 2025");
 
         softly.assertThat(document.getElementById(LAST_UPDATED_DATE_ELEMENT).text())
             .as(LAST_UPDATED_DATE_MESSAGE)
-            .isEqualTo("Last updated 22 April 2025 at 10:30am");
+            .isEqualTo("Last updated 26 June 2025 at 10:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TITLE_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Important information");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementById("open-justice-statement-line1"))
             .as(IMPORTANT_INFORMATION_MESSAGE)
-            .contains("Hearings in the Senior Courts Costs Office will be held in person unless the notice of hearing "
-                          + "has directed otherwise.");
+            .extracting(Element::text)
+            .asString()
+            .contains("Open justice is a fundamental principle of our justice system.");
 
-        softly.assertThat(document.getElementsByClass(LINK_CLASS).get(0)
+        softly.assertThat(document.getElementById("restricted-reporting-orders-message"))
+            .as(IMPORTANT_INFORMATION_MESSAGE)
+            .extracting(Element::text)
+            .asString()
+            .contains("The inclusion of a case in the Press List is no guarantee that it is not subject to a "
+                          + "restricted reporting order.");
+
+
+        softly.assertThat(document.getElementsByClass("govuk-link").get(0)
                               .getElementsByTag("a").get(0)
-                              .attr(HREF))
+                              .attr("href"))
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("https://www.gov.uk/guidance/observe-a-court-or-tribunal-hearing");
 
         softly.assertThat(document.getElementsByTag("th"))
             .as(TABLE_HEADERS_MESSAGE)
-            .hasSize(7)
+            .hasSize(8)
             .extracting(Element::text)
             .containsExactly(
-                "Venue",
-                "Judge",
-                "Time",
-                "Case number",
-                "Case details",
-                "Hearing type",
+                "Date",
+                "Hearing time",
+                "Case reference number",
+                "Case name",
+                "Venue/Platform",
+                "Judge(s)",
+                "Member(s)",
                 "Additional information"
+            );
+
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(16)
+            .extracting(Element::text)
+            .containsExactly(
+                "26 June 2025",
+                "10am",
+                "1234",
+                "This is a case name",
+                "This is a venue name",
+                "Judge A",
+                "Member A",
+                "This is additional information",
+                "26 June 2025",
+                "10:30am",
+                "1235",
+                "This is another case name",
+                "This is another venue name",
+                "Judge B",
+                "Member B",
+                "This is another additional information"
             );
 
         softly.assertAll();
     }
 
     @Test
-    void testSeniorCourtsCostsOfficeDailyCauseListFileConversionInWelsh() throws IOException {
+    void testCicWeeklyHearingListFileConversionInWelsh() throws IOException {
         Map<String, Object> languageResource;
         try (InputStream languageFile = Thread.currentThread()
             .getContextClassLoader()
-            .getResourceAsStream("templates/languages/cy/non-strategic/seniorCourtsCostsOfficeDailyCauseList.json")) {
+            .getResourceAsStream("templates/languages/cy/non-strategic/cicWeeklyHearingList.json")) {
             languageResource = new ObjectMapper().readValue(
                 Objects.requireNonNull(languageFile).readAllBytes(), new TypeReference<>() {
                 });
@@ -166,7 +187,7 @@ class SeniorCourtsCostsOfficeDailyCauseListFileConverterTest {
         Map<String, String> metadata = Map.of(CONTENT_DATE_METADATA, CONTENT_DATE,
                                               PROVENANCE_METADATA, PROVENANCE,
                                               LANGUAGE_METADATA, WELSH,
-                                              LIST_TYPE_METADATA, SENIOR_COURTS_COSTS_OFFICE_DAILY_CAUSE_LIST.name(),
+                                              LIST_TYPE_METADATA, CIC_WEEKLY_HEARING_LIST.name(),
                                               LAST_RECEIVED_DATE_METADATA, LAST_RECEIVED_DATE
         );
 
@@ -177,58 +198,55 @@ class SeniorCourtsCostsOfficeDailyCauseListFileConverterTest {
 
         softly.assertThat(document.title())
             .as(TITLE_MESSAGE)
-            .isEqualTo("Rhestr Achosion Dyddiol Swyddfa Costau’r Uwchlysoedd");
+            .isEqualTo("Rhestr Gwrandawiadau Wythnosol y Tribiwnlys Digolledu am Anafiadau Troseddol");
 
         softly.assertThat(document.getElementById(HEADER_ELEMENT).text())
             .as(HEADER_MESSAGE)
-            .isEqualTo("Rhestr Achosion Dyddiol Swyddfa Costau’r Uwchlysoedd");
-
-        softly.assertThat(document.getElementById(VENUE_NAME_ELEMENT).text())
-            .as(VENUE_MESSAGE)
-            .isEqualTo("Llysoedd Barn Brenhinol");
-
-        softly.assertThat(document.getElementById(ADDRESS_LINE1_ELEMENT).text())
-            .as(VENUE_MESSAGE)
-            .isEqualTo("Strand, London");
-
-        softly.assertThat(document.getElementById(ADDRESS_LINE2_ELEMENT).text())
-            .as(VENUE_MESSAGE)
-            .isEqualTo("WC2A 2LL");
+            .isEqualTo("Rhestr Gwrandawiadau Wythnosol y Tribiwnlys Digolledu am Anafiadau Troseddol");
 
         softly.assertThat(document.getElementById(LIST_DATE_ELEMENT).text())
             .as(LIST_DATE_MESSAGE)
-            .isEqualTo("Rhestr ar gyfer 23 April 2025");
+            .isEqualTo("Rhestr ar gyfer yr wythnos yn dechrau ar 27 June 2025");
 
         softly.assertThat(document.getElementById(LAST_UPDATED_DATE_ELEMENT).text())
             .as(LAST_UPDATED_DATE_MESSAGE)
-            .isEqualTo("Diweddarwyd ddiwethaf 22 April 2025 am 10:30am");
+            .isEqualTo("Diweddarwyd ddiwethaf 26 June 2025 am 10:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TITLE_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Gwybodaeth bwysig");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
-            .as(IMPORTANT_INFORMATION_MESSAGE)
-            .contains("Bydd gwrandawiadau a gynhelir yn Swyddfa Costau’r Uwch Lysoedd yn cael eu cynnal yn wyneb yn "
-                          + "wyneb oni bai bod yr hysbysiad o wrandawiad wedi cyfarwyddo fel arall.");
+        softly.assertThat(document.getElementById("open-justice-statement-line1"))
+            .as(BODY_MESSAGE)
+            .extracting(Element::text)
+            .asString()
+            .contains("Mae cyfiawnder agored yn egwyddor sylfaenol ein system gyfiawnder.");
 
-        softly.assertThat(document.getElementsByClass(LINK_CLASS).get(0)
+        softly.assertThat(document.getElementById("restricted-reporting-orders-message"))
+            .as(BODY_MESSAGE)
+            .extracting(Element::text)
+            .asString()
+            .contains("Nid yw'r ffaith bod achos wedi ei gynnwys yn Rhestr y Wasg yn gwarantu na fydd yn destun "
+                          + "gorchymyn adrodd cyfyngedig. ");
+
+        softly.assertThat(document.getElementsByClass("govuk-link").get(0)
                               .getElementsByTag("a").get(0)
-                              .attr(HREF))
+                              .attr("href"))
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("https://www.gov.uk/guidance/observe-a-court-or-tribunal-hearing");
 
         softly.assertThat(document.getElementsByTag("th"))
             .as(TABLE_HEADERS_MESSAGE)
-            .hasSize(7)
+            .hasSize(8)
             .extracting(Element::text)
             .containsExactly(
-                "Lleoliad",
-                "Barnwr",
-                "Amser",
-                "Rhif yr achos",
-                "Manylion yr achos",
-                "Math o Wrandawiad",
+                "Dyddiad",
+                "Amser y gwrandawiad",
+                "Cyfeirnod yr achos",
+                "Enw’r achos",
+                "Lleoliad/Platfform",
+                "Barnwyr",
+                "Aelod(au)",
                 "Gwybodaeth ychwanegol"
             );
 
